Fix text overflow visual "bug"

--- a/html/editor.css
+++ b/html/editor.css
@@ -2,6 +2,9 @@
     font-size: 1em;
     background-color: #ffe7c7;
 }
+.editor > .titlebar > * {
+    vertical-align: top;
+}
 
 .editor > .titlebar > .back,
 .editor > .titlebar > .title,
@@ -9,11 +12,18 @@
     display: inline-block;
     padding: 0.5em;
 }
+.editor > .titlebar > .title {
+    width: calc(100% - 6em);
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
 .editor > .titlebar > .back::before {
     content: '<';
 }
 .editor > .titlebar > .options {
-    float: right;
+    position: absolute;
+    top: 0; right: 0;
     background-color: #ff99002f;
 }
 
